# Homogeneous_CUDA_NoFFT

./: CMakeLists.txt  layerview.py  output.lyr
docs/: Readme_BytesOrder.txt  lyr_format.pptx  sample creation functions.pptx  testcases.txt
src/: layer.cpp  layer.h  linalg.cpp  linalg.h  main.cpp
